# algo-lecum

./: LECUM.ipynb  PROJECT_ANALYSIS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/lecum/: __init__.py  allocation.py  analysis.py  config.py  data.py  logging_utils.py  models.py  strategy.py  text_generation.py  training.py
tests/: test_analysis.py  test_config_logging.py  test_data.py  test_repo_smoke.py  test_text_generation.py  test_training.py
